// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountRow /> renders with long name 1`] = `
<a
  className="c-StyledLink-hIXuvg"
  href="/accounts/b7df2090560a225dc4934aed43db03a6c674c2d4.lockup.near"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c-TransactionRow-keHKEY mx-0 row"
  >
    <div
      className="pr-0 col-md-auto col-1"
    >
      <img
        className="c-AccountIcon-exgREZ"
        src="/static/images/icon-t-acct.svg"
      />
    </div>
    <div
      className="c-TransactionRowTitle-bvTgKA pt-1 col-md-7 col-11"
    >
      b7df2090560a225dc4934aed43db03a6c674c2d4.lockup.near
    </div>
    <div
      className="c-TransactionRowTransactionId-lbSlCc ml-auto pt-1 text-right col-md-3 col-5"
    >
      <div
        className="spinner-border"
      />
      <div
        className="c-TransactionRowTimer-ehtocQ"
      >
        component.accounts.AccountRow.created_on
         
        2020-09-30T10:23:09Z formatted by PPP
        <div
          className="c-Wrapper-kgHvMp c-Wrapper-kgHvMp-ieesTsS-css"
        >
          <svg
            height=".6em"
            onClick={[Function]}
            viewBox="0 0 18 18"
            width=".6em"
          >
            <path
              d="m11.315 5.9932h-9.7723c-0.85717 0-1.5427 0.63916-1.5427 1.4383v9.1302c0 0.7788 0.68557 1.4383 1.5427 1.4383h9.7931c0.8354 0 1.5427-0.6392 1.5427-1.4383l8e-4 -9.1302c-0.0217-0.79915-0.7073-1.4383-1.5645-1.4383h2e-4zm0.2569 10.549c0 0.1201-0.1071 0.22-0.236 0.22l-9.793-7e-4c-0.12891 0-0.23606-0.0999-0.23606-0.2201l8.3e-4 -9.11c0-0.12018 0.10715-0.22009 0.23607-0.22009h9.793c0.1289 0 0.2361 0.0999 0.2361 0.22009l-9e-4 9.1108z"
              fill="currentColor"
            />
            <path
              d="m16.457 1.1984e-4h-9.7723c-0.85718 0-1.5427 0.63916-1.5427 1.4383v3.3566h1.2858v-3.3566c0-0.12019 0.10714-0.22009 0.23606-0.22009h9.793c0.1289 0 0.2361 0.09989 0.2361 0.22009v9.1302c0 0.1202-0.1071 0.2201-0.2361 0.2201h-2.3146v1.1987h2.3146c0.8354 0 1.5428-0.6392 1.5428-1.4383v-9.1108c0-0.79916-0.6856-1.4383-1.5428-1.4383l2e-4 1.1984e-4z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`<AccountRow /> renders with short name 1`] = `
<a
  className="c-StyledLink-hIXuvg"
  href="/accounts/account"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c-TransactionRow-keHKEY mx-0 row"
  >
    <div
      className="pr-0 col-md-auto col-1"
    >
      <img
        className="c-AccountIcon-exgREZ"
        src="/static/images/icon-t-acct.svg"
      />
    </div>
    <div
      className="c-TransactionRowTitle-bvTgKA pt-1 col-md-7 col-11"
    >
      account
    </div>
    <div
      className="c-TransactionRowTransactionId-lbSlCc ml-auto pt-1 text-right col-md-3 col-5"
    >
      <div
        className="spinner-border"
      />
      <div
        className="c-TransactionRowTimer-ehtocQ"
      >
        component.accounts.AccountRow.created_on
         
        2020-09-30T10:23:09Z formatted by PPP
        <div
          className="c-Wrapper-kgHvMp c-Wrapper-kgHvMp-ieesTsS-css"
        >
          <svg
            height=".6em"
            onClick={[Function]}
            viewBox="0 0 18 18"
            width=".6em"
          >
            <path
              d="m11.315 5.9932h-9.7723c-0.85717 0-1.5427 0.63916-1.5427 1.4383v9.1302c0 0.7788 0.68557 1.4383 1.5427 1.4383h9.7931c0.8354 0 1.5427-0.6392 1.5427-1.4383l8e-4 -9.1302c-0.0217-0.79915-0.7073-1.4383-1.5645-1.4383h2e-4zm0.2569 10.549c0 0.1201-0.1071 0.22-0.236 0.22l-9.793-7e-4c-0.12891 0-0.23606-0.0999-0.23606-0.2201l8.3e-4 -9.11c0-0.12018 0.10715-0.22009 0.23607-0.22009h9.793c0.1289 0 0.2361 0.0999 0.2361 0.22009l-9e-4 9.1108z"
              fill="currentColor"
            />
            <path
              d="m16.457 1.1984e-4h-9.7723c-0.85718 0-1.5427 0.63916-1.5427 1.4383v3.3566h1.2858v-3.3566c0-0.12019 0.10714-0.22009 0.23606-0.22009h9.793c0.1289 0 0.2361 0.09989 0.2361 0.22009v9.1302c0 0.1202-0.1071 0.2201-0.2361 0.2201h-2.3146v1.1987h2.3146c0.8354 0 1.5428-0.6392 1.5428-1.4383v-9.1108c0-0.79916-0.6856-1.4383-1.5428-1.4383l2e-4 1.1984e-4z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</a>
`;
